Footer is gone on mobile view. Removed Search bar, dark mode, language selector from header. On Dashboard, fixed the surprise bags css and made it so that it shows Today, Tommorrow,... on the days

--- a/src/Components/Dashbaord.css
+++ b/src/Components/Dashbaord.css
@@ -13,7 +13,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
     width: 100%;  /* Set exact width from Figma */
-    height: 440px; /* Set height */
+    height: 465px; /* Set height */
 
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@
 }
 
 .dsurprise-bags-header {
-    background-color: #f7f7f7;
+    background-color: #1b5e20;
     font-size: 24px;
     font-weight: bold;
     color: #333;
@@ -46,7 +46,7 @@
 .dsurprise-bags-footer {
     width: 100%;
     background-color: #e6e4e4; /* Matches content background */
-    padding-bottom: 15px;
+    padding-bottom: 10px;
     padding-left: 10px;
 }
 
@@ -55,7 +55,7 @@
 .dsurprise-bags h2 {
     font-size: 24px;
     font-weight: bold;
-    color: #333;
+    color: white;
     margin-bottom: 20px;
 }
 
@@ -79,7 +79,7 @@
     display: flex;
     flex-direction: column;
     width: 270px; /* Set card width */
-    height: 240px;
+    height: 285px;
     position: relative; /* Required for positioning the badge */
     /* flex: 0 0 auto; */
 }
@@ -114,7 +114,7 @@
 }
 
 .dsurprise-bag-card p {
-    font-size: 12px;
+    font-size: 13px;
     color: #555;
     margin: 5px 0;
     display: flex;
@@ -134,11 +134,13 @@
 .price-availability-container {
     display: flex;
     justify-content: space-between;
-    gap: 40px;
+    /* gap: 8px; */
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .price-availability-container p {
-    white-space: nowrap; /* Ensures content stays on one line */
+    white-space: normal; /* Ensures content stays on one line */
     text-overflow: ellipsis; /* Adds ellipsis to truncated content */
     display: inline-block; /* Maintains inline behavior */
     max-width: calc(100% - 20px); /* Adjust as necessary for padding or margins */
