--- a/src/Components/FooterLink/FooterLinks.css
+++ b/src/Components/FooterLink/FooterLinks.css
@@ -136,43 +136,6 @@
 
 @media (max-width:770px){
     .footer-container{
-        padding-right: 10px;
-        padding-left: 10px;
-    }
-
-    .footer-column h4 {
-        font-size: 14px;
-    }
-
-    .footer-column ul li a {
-        font-size: 12px;
-    }
-}
-
-@media (max-width:550px){
-    .footer-container {
-        padding-right: 0px;
-        padding-left: 0px;
-        font-size: 10px;
-    }
-
-    .footer-column ul li a {
-        font-size: 10px;
-    }
-
-    .footer-column h4 {
-        font-size: 10px;
-    }
-
-    .footer-bottom-links a {
-        font-size: 12px;
-    }
-
-    .social-icons a {
-        font-size: 12px;
-    }
-
-    .copyright {
-        font-size: 12px;
+        display:none;
     }
 }
